<resources>
    <string name="app_name">LifeSaver</string>

    <string name="rb_donor">Donor</string>
    <string name="rb_patient">Patient</string>
    <string name="edit_date">MM/DD/YYYY</string>

    <string name="btn_cancel">Cancel</string>
    <string name="btn_register">Register</string>
    <string name="txt_pname">Manu</string>
    <string name="txt_pbloodtype">O+</string>

    <string name="txt_ddonation">10/11/1992</string>
    <string name="txt_dname">Latha</string>
    <string name="txt_dbloodtype">A+</string>

    <string name="txt_pdonation">Red Cross</string>

    <string name="action_settings">Settings</string>
    <string name="txt_registration">Registration</string>
    <string name="title_activity_donor_registration">DonorRegistration</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_fragments">Fragments</string>
    <string name="title_activity_patient_profile">PatientProfile</string>
    <string name="title_activity_donor_profile">DonorProfile</string>
    <string name="title_activity_patient_stories">PatientStories</string>
    <string name="title_activity_view_full_story">ViewFullStory</string>
    <string name="title_activity_registration">Registration</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
