<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:stretchColumns="1"
    android:background="@color/red2"
    tools:context="edu.depaul.csc472.lifesaver.DonorRegistration">

    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text = "Email:"
            android:layout_column="0"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="20dp"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/edit_email"
            android:layout_column="1"
            android:layout_weight="2"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            android:background="@color/white"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text = "Password:"
            android:layout_column="0"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="20dp"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/edit_pwd"
            android:layout_column="1"
            android:layout_weight="2"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:background="@color/white"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text = "Name:"
            android:layout_column="0"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="20dp"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/edit_name"
            android:layout_column="1"
            android:layout_weight="2"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:background="@color/white"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text = "Type Of Blood:"
            android:layout_column="0"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="20dp"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/edit_type"
            android:layout_column="1"
            android:layout_weight="2"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:background="@color/white"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text = "Last Donation Date:"
            android:layout_column="0"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textColorHint="@color/white"
            android:hint="@string/edit_date"/>

    </TableRow>
    <TableRow android:layout_marginTop="10dp">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="170dp"
            android:background="@color/red1"
            android:textColor="@color/white"
            android:id="@+id/btn_register"
            android:text="@string/btn_register"
            />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:layout_marginLeft="5dp"
            android:background="@color/red1"
            android:textColor="@color/white"
            android:id="@+id/btn_cancel"
            android:text="@string/btn_cancel"
            />
    </TableRow>


</TableLayout>
