<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:stretchColumns="1"
    android:background="@color/red2"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.depaul.csc472.lifesaver.DonorProfile">

    <TableRow android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Donor Profile"
            android:textColor="@color/white"
            android:textSize="35dp"
            android:textStyle=""
            />
    </TableRow>
    <TableRow android:gravity="center" android:layout_marginTop="10dp">
        <ImageView android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:src="@drawable/icon"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text = "Name:"
            android:layout_column="0"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="20dp"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/edit_dname"
            android:layout_column="1"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            android:background="@color/white"
            android:visibility="gone"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_dname"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:id="@+id/txt_dname"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "edit"
            android:id="@+id/dname_edit"
            android:textStyle="italic"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/blue1"
            android:textSize="18dp"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text = "Type Of Blood:"
            android:layout_column="0"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="20dp"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/edit_dbloodtype"
            android:layout_column="1"
            android:layout_weight="1"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:background="@color/white"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text = "@string/txt_dbloodtype"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:id="@+id/txt_dbloodtype"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "edit"
            android:paddingLeft="10dp"
            android:id="@+id/dbloodtype_edit"
            android:layout_marginTop="10dp"
            android:textStyle="italic"
            android:textColor="@color/blue1"
            android:textSize="18dp"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text = "Last Donation Date:"
            android:layout_column="0"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="20dp"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/edit_ddonation"
            android:layout_column="1"
            android:visibility="gone"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:background="@color/white"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text = "@string/txt_ddonation"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:id="@+id/txt_ddonation"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "edit"
            android:id="@+id/ddonation_edit"
            android:paddingLeft="10dp"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:textColor="@color/blue1"
            android:textSize="18dp"/>
    </TableRow>

</TableLayout>
